# bryte-descriptor

./: Cargo.toml  README.md
anchor-demo-program/: .gitignore  Anchor.toml  Dockerfile  README.md  package.json
anchor-demo-program/app/: app.ts
anchor-demo-program/app/idl/: solalumin_demo.json
anchor-demo-program/app/types/: solalumin_demo.ts
anchor-demo-program/programs/bryte-descriptor-demo/: Cargo.toml
anchor-demo-program/programs/bryte-descriptor-demo/src/: lib.rs
anchor-demo-program/tests/: initialize-demo.ts  update-account.ts
bryte-descriptor-attribute/: Cargo.toml  README.md
bryte-descriptor-attribute/src/: lib.rs
bryte-descriptor-attribute/tests/: tests.rs
bryte-descriptor-client/: Cargo.toml  README.md
bryte-descriptor-client/src/: lib.rs
bryte-descriptor-solana-demo/: README.md
bryte-descriptor-solana-demo/client/: client.ts  package.json
bryte-descriptor-solana-demo/program/: Cargo.toml
bryte-descriptor-solana-demo/program/src/: lib.rs
bryte-descriptor-state/: Cargo.toml  README.md
bryte-descriptor-state/src/: bryte_desciptor_hash.rs  discriminators.rs  lib.rs  states.rs
