[package]
name = "bryte_descriptor_client"
version = "0.1.0-alpha.2"
edition = "2021"
description = "Bryte-Descriptor client for retrieving account data as JSON"
license = "Apache-2.0"
resolver = "2"
authors = ["Will Kennedy"]
keywords = ["solana", "logging", "json", "parsing"]
categories = ["Development tools"]
exclude=["/tests", "/examples", "/benches", "/docs", "/target", "/.github", "/.gitignore", "/.gitattributes", "/.gitmodules", "/.travis.yml", "/.cargo-ok", "/.git", "/.idea"]

[dependencies]
serde_derive = "1.0.188"
url = "2.2.2"
log = "0.4.19"
bs58 = "0.5.0"
futures-util = "0.3.28"
anyhow = "1.0.75"
serde = { version = "1.0.171" }
serde_json = {version = "1.0.104"}
borsh = "0.10.3"
regex = "1.9.5"
solana-rpc-client = "1.16.18"
solana-pubsub-client = { version = "1.16.18" }
solana-rpc-client-api = { version = "1.16.18" }
solana-sdk = { version = "1.16.18" }
solana-account-decoder = "1.16.18"
reqwest = "0.11.22"
borsh-serde-adapter = "0.1.0"
borsh-schema-writer = "0.1.0"
base64 = "0.21.1"
chrono = "0.4.31"
tokio = {version = "1.33.0", features = ["full"]}
bryte_descriptor_state = "0.1.0-alpha.1"
