[package]
edition = "2021"
rust-version = "1.60"
version = "0.1.0-alpha.1"
license = "Apache-2.0"
resolver = "2"
name = "bryte_descriptor_solana_demo"

[dependencies]
borsh = "0.10.3"
solana-program = "=1.16.18"
bryte_descriptor_attribute = {path = "../../bryte-descriptor-attribute" }
bryte_descriptor_state = {path = "../../bryte-descriptor-state" }

borsh-serde-adapter = "0.1.0"
borsh-schema-writer = "0.1.0"
bytes = "1.5.0"

[lib]
crate-type = ["cdylib", "lib"]