[package]
name = "bryte_descriptor_anchor_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bryte_descriptor_anchor_demo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
solana-program = "=1.16.14"
serde = "1.0.175"
serde_json = "1.0.103"
serde_derive = "1.0.175"
hifitime = "3.8.2"
bs58 = "0.5.0"
base64 = "0.13.0"
borsh-schema-writer = "0.1.0"
borsh-serde-adapter = "0.1.0"
bryte_descriptor_attribute = { path = "../../../bryte-descriptor-attribute", version = "0.1.0-alpha.2" }
bryte_descriptor_state = { path = "../../../bryte-descriptor-state" }

